WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264612
RELEASE_ASSERT() under GPUProcessConnection::create(IPC::Connection&)
https://bugs.webkit.org/show_bug.cgi?id=264612
Summary
RELEASE_ASSERT() under GPUProcessConnection::create(IPC::Connection&)
Chris Dumez
Reported
2023-11-10 11:55:48 PST
RELEASE_ASSERT() under GPUProcessConnection::create(IPC::Connection&): ``` 7 WTFCrashWithInfo(int, char const*, char const*, int) ==> 7 WebKit::GPUProcessConnection::create(IPC::Connection&) <== 7 WebKit::WebProcess::ensureGPUProcessConnection() 5 WebKit::RemoteRenderingBackendProxy::ensureGPUProcessConnection()::$_5::operator()() | 5 WebKit::RemoteRenderingBackendProxy::ensureGPUProcessConnection() | 5 WebKit::RemoteRenderingBackendProxy::streamConnection() | 5 auto WebKit::RemoteRenderingBackendProxy::send<Messages::RemoteRenderingBackend::CreateImageBuffer, WebKit::RenderingBackendIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>(Messages::RemoteRenderingBackend::CreateImageBuffer&&, WTF::ObjectIdentifierGeneric<WebKit::RenderingBackendIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits>) | 5 auto WebKit::RemoteRenderingBackendProxy::send<Messages::RemoteRenderingBackend::CreateImageBuffer>(Messages::RemoteRenderingBackend::CreateImageBuffer&&) | 5 WebKit::RemoteRenderingBackendProxy::createRemoteImageBuffer(WebCore::ImageBuffer&) | 5 WebKit::RemoteResourceCacheProxy::remoteResourceCacheWasDestroyed() | 5 WebKit::RemoteRenderingBackendProxy::didClose(IPC::Connection&) | 5 IPC::Connection::dispatchDidCloseAndInvalidate()::$_13::operator()() const | 5 WTF::Detail::CallableWrapper<IPC::Connection::dispatchDidCloseAndInvalidate()::$_13, void>::call() ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2023-11-10 11:55:57 PST
<
rdar://117840925
>
Chris Dumez
Comment 2
2023-11-10 12:07:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20325
EWS
Comment 3
2023-11-10 14:21:38 PST
Committed
270569@main
(0532f1c87a63): <
https://commits.webkit.org/270569@main
> Reviewed commits have been landed. Closing PR #20325 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug